--- a/index.jade
+++ b/index.jade
@@ -1,7 +1,9 @@
 link(rel="stylesheet", href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
 link(rel="stylesheet", href='/styles/yeti.min.css')
 
+script(type="text/javascript", src='/bower_components/bootstrap/dist/js/bootstrap.min.js')
 script(type="text/javascript", src='/bower_components/angular/angular.min.js')
+script(type="text/javascript", src='/bower_components/angular-resource/angular-resource.min.js')
 script(type="text/javascript", src='/app/app.js')
 
 body(ng-app='app')
