posting doctor front end

--- a/index.jade
+++ b/index.jade
@@ -1,15 +1,24 @@
 link(rel="stylesheet", href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
 link(rel="stylesheet", href='/styles/yeti.min.css')
 
-script(type="text/javascript", src='/bower_components/bootstrap/dist/js/bootstrap.min.js')
+script(type="text/javascript", src='/bower_components/jquery/dist/jquery.min.js')
 script(type="text/javascript", src='/bower_components/angular/angular.min.js')
 script(type="text/javascript", src='/bower_components/angular-resource/angular-resource.min.js')
 script(type="text/javascript", src='/app/app.js')
+script(type="text/javascript", src='/app/doctors.js')
 
 body(ng-app='app')
     .container
-        h1 Find a Doctor Today!
         div(ng-controller='testCtrl')
+            h1 Post a New Doctor
+            form(ng-submit="submit()")
+                .form-group
+                    input.form-control(placeholder="Enter name here..." ng-model="name")
+                .form-group
+                    input.form-control(placeholder="Enter description herere..." ng-model="description")
+                .form-group
+                    button.btn.btn-primary(type="submit") Post
+            h1 Find a Doctor Today!
             .list-group
                 a.list-group-item(href='#')(ng-repeat='doctor in doctors')
                     h2.list-group-item-heading {{ doctor.name }}
